--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,14 @@ jobs:
       - name: Test
         run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
 
+      - name: Debug Surefire Reports
+        run: ls -l target/surefire-reports/
+
       - name: Report
         uses: dorny/test-reporter@v1
         if: always()
         with:
           name: Maven Tests
-          path: target/surefire-reports/*.xml
+          path: "**/surefire-reports/TEST-*.xml"
           reporter: java-junit
           fail-on-error: true
