--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
         if: always()
         with:
           name: Maven Tests
-          path: "**/surefire-reports/TEST-*.xml"
+          path: "target/surefire-reports/TEST-*.xml"
           reporter: java-junit
           fail-on-error: true
